Made game scale with zoom

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</thead>
 					<tbody id="scoreboardList"></tbody>
 				</table>
-				<button id="againButton" style="text-align: center" class="btn">
+				<button id="againButton" style="text-align: center;" class="btn btn-transparent">
 					<div>Continue</div>
 					<small>(space)</small>
 				</button>
